# runi

./: .claude_session_id  .cursorignore  .cursorrules  .editorconfig  .env.example  .gitignore  .markdownlint.json  .mcp.json  .npmrc  .npmrc.example  .prettierignore  .prettierrc  .ralph_session_history  .response_analysis  .stylelintrc.json  @AGENT.md  @fix_plan.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  PROMPT.md  README.md  SKILL.md  components.json  eslint.config.js  index.html  justfile  package-lock.json  package.json  playwright.config.ts  playwright.storybook.config.ts  playwright.tauri.config.ts  playwright.visual.config.ts  pnpm-lock.yaml  prd.md  release-please-config.json  svelte.config.js  tsconfig.json  (+8 more)
.claude/agents/: backend-developer.md  code-reviewer.md  frontend-developer.md  plan-researcher.md  tdd-implementer.md  test-runner.md  ui-designer.md
.claude/commands/: audit-plan.md  close-feature-agent.md  code-review.md  create-feature-plan.md  heal-ralph.md  impl-discipline.md  list-feature-plans.md  plan-check-status.md  plan-list-agents.md  pr-check-fixes.md  pr-comments.md  pr-create.md  pr.md  prime.md  review-mcp.md  run-agent.md  scaffold.md  test.md  update-feature-plan.md  verify-workflow-solution.md  whats-next.md
.claude/hooks/: typescript-quality.json
.claude/skills/: api-testing.md
.cursor/: mcp.json
.cursor/commands/: audit-plan.md  close-feature-agent.md  code-review.md  create-feature-plan.md  create-tdd-plan.md  heal-ralph.json  heal-ralph.md  list-feature-plans.md  migrate-feature-plan.md  plan-check-status.md  plan-cleanup.md  plan-list-agents.md  pr-check-fixes.md  pr-comments.md  pr-create.md  ralph-commands.json  review-mcp.md  run-agent.md  update-feature-plan.md  update-plan.md  verify-workflow-solution.md  work.md
.cursor/plans/: ai_control_via_mcp_f5c4fca3.plan.md  discord_chat_integration_17724d05.plan.md
.cursor/templates/: command.rs  (+1 more)
.github/: FUNDING.yml
.husky/: pre-commit  pre-push
.planning-docs/: prd.md
.storybook/: KNOWN_ISSUES.md  README.md  main.ts  preview.ts  preview.tsx  vitest.setup.ts
collections/: col_event_test_collection_9bf4a8.yaml
demo/: README.md
designs/: runi-design.pen
docs/: ARCHITECTURE.md  CODE_DISPLAY_COMPONENT_INVENTORY.md  CODE_DISPLAY_LEGACY_AUDIT.md  CURSOR-COMMANDS.md  DECISIONS.md  DESIGN_IDEOLOGY.md  FEATURE_FLAGS.md  LAYOUT_IMPLEMENTATION.md  MOTION_BEST_PRACTICES.md  NORMALIZATION-SUMMARY.md  RALPH-FILE-STRUCTURE.md  STORYBOOK_10_FEATURES.md  STORYBOOK_TEMPLATES.md  STORYBOOK_TESTING.md  logo-svg-conversion-plan.md
plans/: base-ui-migration.md
prompts/: HTTPIE-LEARNINGS.md  PROMPT-1-http-core.md  PROMPT-1.5-tech-stack-alignment.md  PROMPT-2-DESIGN-GUIDELINES.md  PROMPT-2-QUICK-REFERENCE.md  PROMPT-2-REVIEW.md  PROMPT-2-SUMMARY.md  PROMPT-2-layout-ui.md  PROMPT-2A-layout-foundation.md  PROMPT-2B-request-response-basics.md  PROMPT-2C-response-viewer-polish.md  PROMPT-3-request-builder.md  PROMPT-4-intelligence.md  README.md  heal-template.md
scripts/: assess-agent-status.sh  check-agents-status.sh  check-docs-only.sh  clean-ralph.sh  create-agent-issues.sh  detect-active-agent.sh  detect-active-plan.sh  generate-icons.sh  heal-plan.sh  heal-ralph.sh  list-agents.sh  list-plans.sh  measure-startup.sh  next-task.sh  normalize-ralph.sh  open-agent-file.sh  open-all-agents-terminals.sh  open-all-agents.sh  restore-motion-plus.js  run-agent.sh  run-next-task.sh  setup-motion-plus.js  typescript-quality.sh  validate-ralph.sh  validate-startup-timing.js  work.sh
specs/: requirements.md
src/: App.tsx  app.css  main.tsx
src-tauri/: Cargo.toml  build.rs  clippy.toml  rustfmt.toml  tauri.conf.json
src-tauri/assets/: httpbin-openapi.json
src-tauri/bindings/: CanvasEventHint.ts  CollectionSource.ts  DriftActionResult.ts  DriftSeverity.ts  DriftSuggestedAction.ts  HistoryEntry.ts  HttpResponse.ts  HurlSuiteResult.ts  ImportCollectionResult.ts  PinnedSpecVersion.ts  ProjectContext.ts  ProjectContextUpdate.ts  RequestParams.ts  RequestTiming.ts  SourceType.ts  SuggestionStatus.ts  TabType.ts  TemplateSummary.ts
src-tauri/capabilities/: default.json
src-tauri/collections/: col_httpbin_org_bab5e3.yaml  col_test_in_repo_e0c409.yaml
src-tauri/icons/: icon.icns
src-tauri/migrations/: V001_initial_schema.sql  V002_project_context.sql  V003_suggestions.sql
src-tauri/src/: main.rs
src-tauri/src/application/: import_service.rs  mcp_server_service.rs  mcp_service.rs  mod.rs  project_context_service.rs  proxy_service.rs  suggestion_service.rs
src-tauri/src/domain/: canvas_state.rs  errors.rs  http.rs  mod.rs  models.rs  participant.rs  project_context.rs  suggestion.rs
src-tauri/src/domain/collection/: binding.rs  drift.rs  git_port.rs  intelligence.rs  mod.rs  source.rs  spec_port.rs  test_port.rs  types.rs
src-tauri/src/domain/features/: config.rs  mod.rs
src-tauri/src/domain/mcp/: config.rs  events.rs  jsonrpc.rs  mod.rs  protocol.rs  transport.rs  types.rs
src-tauri/src/infrastructure/: commands.rs  http.rs  logging.rs  memory_monitor.rs  mod.rs
src-tauri/src/infrastructure/git/: cli_adapter.rs  mod.rs
src-tauri/src/infrastructure/hurl/: mod.rs  runner.rs
src-tauri/src/infrastructure/mcp/: client.rs  commands.rs  events.rs  fake_transport.rs  mod.rs
src-tauri/src/infrastructure/mcp/server/: dispatcher.rs  http_sse.rs  mod.rs  session.rs  sse_broadcaster.rs
src-tauri/src/infrastructure/spec/: converter.rs  fetcher.rs  hasher.rs  http_fetcher.rs  mod.rs  openapi_parser.rs  openapi_types.rs  parser.rs  streaming.rs
src-tauri/src/infrastructure/storage/: collection_store.rs  encryption.rs  file_storage.rs  history.rs  memory_storage.rs  migrations.rs  mod.rs  sqlite_storage.rs  traits.rs
(+771 files in other folders)
