[package]
name = "runi"
version = "0.1.0"
description = "Runi - An open-source Tauri desktop application"
authors = ["Paul Breuler"]
license = "MIT"
repository = "https://github.com/paulbreuler/runi"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["devtools", "macos-private-api"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls", "http2"] }
anyhow = "1.0.39"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
# Pedantic by default, with priority for overrides
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Specific overrides (document why each is allowed)
module_name_repetitions = "allow"  # Common in API design
missing_errors_doc = "allow"       # Tauri commands use String errors
missing_panics_doc = "allow"       # We avoid panics
