[package]
name = "runi"
version = "0.1.0"
description = "Runi - An open-source Tauri desktop application"
authors = ["Paul Breuler"]
license = "MIT"
repository = "https://github.com/paulbreuler/runi"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["devtools", "macos-private-api"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time", "fs"] }
curl = "0.4"
anyhow = "1.0.39"
dirs = "5.0"
uuid = { version = "1.0", features = ["v7", "serde", "std"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
rusqlite = { version = "0.33", features = ["bundled"] }
sysinfo = "0.31"
# Encryption (Phase 10)
aes-gcm = "0.10.3"
base64 = "0.22.1"
keyring = "3.6"

[dev-dependencies]
ts-rs = "10"
serial_test = "3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"      # Optimize for size over speed
lto = true
codegen-units = 1
strip = true
panic = "abort"      # Smaller binary, no unwinding

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
# Pedantic by default, with priority for overrides
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Specific overrides (document why each is allowed)
module_name_repetitions = "allow"  # Common in API design
missing_errors_doc = "allow"
missing_panics_doc = "allow"       # We avoid panics
cast_precision_loss = "allow"      # Acceptable for memory/file size measurements (u64/usize to f64)
