[package]
name = "runi"
version = "0.10.1"
description = "Runi - An open-source Tauri desktop application"
authors = ["Paul Breuler"]
license = "MIT"
repository = "https://github.com/paulbreuler/runi"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = ["devtools", "macos-private-api"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time", "fs"] }
curl = "0.4"
reqwest = { version = "0.13", features = ["json"] }
anyhow = "1.0.39"
dirs = "6.0"
uuid = { version = "1.0", features = ["v7", "serde", "std"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.10"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
sysinfo = "0.38"
sha2 = "0.10"
hex = "0.4"
openapiv3 = "2.2.0"
# MCP server (HTTP/SSE transport)
axum = { version = "0.8", features = ["json"] }
tokio-stream = "0.1"
# Encryption (Phase 10)
aes-gcm = "0.10.3"
base64 = "0.22.1"
keyring = "3.6"
# Topic-based event filtering (glob patterns for SSE subscriptions)
glob-match = "0.2"
# Type generation
ts-rs = "12"
toml = "1.0.3"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"      # Optimize for size over speed
lto = true
codegen-units = 1
strip = true
panic = "abort"      # Smaller binary, no unwinding

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
# Pedantic by default, with priority for overrides
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Specific overrides (document why each is allowed)
module_name_repetitions = "allow"  # Common in API design
missing_errors_doc = "allow"
missing_panics_doc = "allow"       # We avoid panics
cast_precision_loss = "allow"      # Acceptable for memory/file size measurements (u64/usize to f64)
